fix overflow content

--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -707,6 +707,7 @@
 
 
 .comments {
+	overflow: hidden;
 	.comments-inner {
 		padding-top: 50px;
 		padding-bottom: 76px;
